--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -26,7 +26,7 @@ a:hover {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  z-index: 2;
+  z-index: 4;
 }
 
 .wrapper_closed {
@@ -276,7 +276,7 @@ a:hover {
   height: 800px;
   width: 18%;
   border-radius: 16px;
-  z-index: 99;
+  z-index: 2;
 }
 
 .slider__arrow_left {
